run.log
leet_380 test run — Fri Apr 17 06:12:53 PM IST 2026
==========================================
[32mPASS[0m #001 parallel_sum  [2m[10/10 tests][0m
[32mPASS[0m #002 parallel_dot_product  [2m[10/10 tests][0m
[32mPASS[0m #003 parallel_matrix_vector  [2m[8/8 tests][0m
[32mPASS[0m #004 parallel_histogram  [2m[7/7 tests][0m
[32mPASS[0m #005 monte_carlo_pi_omp  [2m[6/6 tests][0m
[32mPASS[0m #006 parallel_prefix_scan  [2m[8/8 tests][0m
[32mPASS[0m #007 parallel_matrix_multiply  [2m[7/7 tests][0m
[32mPASS[0m #008 parallel_min_max_index  [2m[8/8 tests][0m
[32mPASS[0m #009 false_sharing_fix  [2m[7/7 tests][0m
[32mPASS[0m #010 parallel_stencil_1d  [2m[7/7 tests][0m
[32mPASS[0m #011 parallel_stencil_2d  [2m[6/6 tests][0m
[32mPASS[0m #012 omp_schedule_clauses  [2m[7/7 tests][0m
[32mPASS[0m #013 omp_tasks_fibonacci  [2m[6/6 tests][0m
[32mPASS[0m #014 omp_locks_fine_grained  [2m[6/6 tests][0m
[32mPASS[0m #015 parallel_merge_sort  [2m[8/8 tests][0m
[32mPASS[0m #016 parallel_quicksort  [2m[8/8 tests][0m
[32mPASS[0m #017 parallel_bfs_omp  [2m[7/7 tests][0m
[32mPASS[0m #018 parallel_sieve  [2m[9/9 tests][0m
[32mPASS[0m #019 parallel_word_count  [2m[7/7 tests][0m
[32mPASS[0m #020 omp_reduction_custom  [2m[9/9 tests][0m
[32mPASS[0m #021 parallel_floyd_warshall  [2m[6/6 tests][0m
[32mPASS[0m #022 omp_nested_parallelism  [2m[7/7 tests][0m
[32mPASS[0m #023 parallel_saxpy  [2m[6/6 tests][0m
[32mPASS[0m #024 parallel_sparse_matvec  [2m[5/5 tests][0m
[32mPASS[0m #025 parallel_radix_sort  [2m[8/8 tests][0m
[32mPASS[0m #026 mpi_hello_world  [2m[3/3 tests][0m
[32mPASS[0m #027 mpi_ping_pong  [2m[5/5 tests][0m
[32mPASS[0m #028 mpi_broadcast  [2m[4/4 tests][0m
[32mPASS[0m #029 mpi_scatter_gather  [2m[3/3 tests][0m
[32mPASS[0m #030 mpi_reduce_sum  [2m[4/4 tests][0m
[32mPASS[0m #031 mpi_allreduce_dot  [2m[4/4 tests][0m
[32mPASS[0m #032 mpi_prefix_scan  [2m[4/4 tests][0m
[32mPASS[0m #033 mpi_distributed_matrix_vector  [2m[2/2 tests][0m
[32mPASS[0m #034 mpi_ring_communication  [2m[2/2 tests][0m
[32mPASS[0m #035 mpi_nonblocking_overlap  [2m[3/3 tests][0m
[32mPASS[0m #036 mpi_derived_struct  [2m[3/3 tests][0m
[32mPASS[0m #037 mpi_cartesian_topology  [2m[3/3 tests][0m
[31mFAIL[0m #038 mpi_stencil_1d  [2m[3/4 tests][0m
  FAIL: uniform data stays uniform: expected ~5, got 1.46514 (diff=3.53486)
[32mPASS[0m #039 mpi_histogram  [2m[4/4 tests][0m
[32mPASS[0m #040 mpi_monte_carlo_pi  [2m[3/3 tests][0m
[31mCOMPILE FAIL[0m #041 mpi_gather_stats
  Compiler: mpic++ -O2 -std=c++17
  In file included from /tmp/leet380_runall/p041/wrapper.cpp:2:
  /home/threesamyak/leet_380/problems/041_mpi_gather_stats/tests.cpp:7:8: error: redefinition of ‘struct Stats’
      7 | struct Stats { double min, max, sum; long long count; };
        |        ^~~~~
  In file included from /tmp/leet380_runall/p041/wrapper.cpp:1:
  /tmp/leet380_runall/p041/solve.cpp:7:8: note: previous definition of ‘struct Stats’
      7 | struct Stats { double min, max, sum; long long count; };
        |        ^~~~~
[32mPASS[0m #042 mpi_alltoall_transpose  [2m[8/8 tests][0m
[32mPASS[0m #043 mpi_reduce_scatter  [2m[8/8 tests][0m
[31mCOMPILE FAIL[0m #044 mpi_parallel_sort
  Compiler: mpic++ -O2 -std=c++17
  In file included from /home/threesamyak/leet_380/problems/044_mpi_parallel_sort/tests.cpp:2,
                   from /tmp/leet380_runall/p044/wrapper.cpp:2:
  /home/threesamyak/leet_380/problems/044_mpi_parallel_sort/tests.cpp: In lambda function:
  /home/threesamyak/leet_380/problems/044_mpi_parallel_sort/tests.cpp:120:42: error: ‘INT_MAX’ was not declared in this scope
    120 |         int local_min = result.empty() ? INT_MAX : result.front();
        |                                          ^~~~~~~
  /home/threesamyak/leet_380/server/harness.h:103:21: note: in definition of macro ‘RUN_TEST’
    103 |     auto _test_fn = __VA_ARGS__; \
        |                     ^~~~~~~~~~~
  /home/threesamyak/leet_380/problems/044_mpi_parallel_sort/tests.cpp:3:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; this is probably fixable by adding ‘#include <climits>’
      2 | #include "harness.h"
    +++ |+#include <climits>
      3 | #include <mpi.h>
  /home/threesamyak/leet_380/problems/044_mpi_parallel_sort/tests.cpp:121:42: error: ‘INT_MIN’ was not declared in this scope
    121 |         int local_max = result.empty() ? INT_MIN : result.back();
        |                                          ^~~~~~~
  /home/threesamyak/leet_380/server/harness.h:103:21: note: in definition of macro ‘RUN_TEST’
    103 |     auto _test_fn = __VA_ARGS__; \
        |                     ^~~~~~~~~~~
  /home/threesamyak/leet_380/problems/044_mpi_parallel_sort/tests.cpp:121:42: note: ‘INT_MIN’ is defined in header ‘<climits>’; this is probably fixable by adding ‘#include <climits>’
[32mPASS[0m #045 mpi_bfs  [2m[8/8 tests][0m
[32mPASS[0m #046 mpi_word_count  [2m[9/9 tests][0m
[32mPASS[0m #047 mpi_matrix_multiply  [2m[8/8 tests][0m
[32mPASS[0m #048 mpi_one_sided_rma  [2m[9/9 tests][0m
[32mPASS[0m #049 mpi_io_write  [2m[8/8 tests][0m
[32mPASS[0m #050 mpi_load_balance_dynamic  [2m[10/10 tests][0m
[32mPASS[0m #051 mpi_reduce_custom_op  [2m[10/10 tests][0m
[32mPASS[0m #052 mpi_gather_variable  [2m[10/10 tests][0m
[32mPASS[0m #053 mpi_broadcast_tree  [2m[10/10 tests][0m
[32mPASS[0m #054 mpi_reduce_tree  [2m[10/10 tests][0m
[32mPASS[0m #055 mpi_distributed_sum_verify  [2m[10/10 tests][0m
[32mPASS[0m #056 hybrid_hello_world  [2m[11/11 tests][0m
[32mPASS[0m #057 hybrid_parallel_sum  [2m[10/10 tests][0m
[32mPASS[0m #058 hybrid_matrix_multiply  [2m[10/10 tests][0m
[32mPASS[0m #059 hybrid_stencil_1d  [2m[10/10 tests][0m
[32mPASS[0m #060 hybrid_monte_carlo_pi  [2m[10/10 tests][0m
[31mFAIL[0m #061 hybrid_word_count  [2m[3/10 tests][0m
  FAIL: simple cat sat mat example: result mismatch
  FAIL: single word repeated 10 times: should have 1 unique word
  FAIL: all unique words each count 1: result mismatch
  FAIL: counts match serial reference (medium text): mismatch with serial reference
  FAIL: large repeated text correct counts: large text mismatch
  FAIL: single word text: should have 1 entry
  FAIL: varied frequency counts match serial: varied frequency mismatch
[32mPASS[0m #062 hybrid_prefix_scan  [2m[10/10 tests][0m
[32mPASS[0m #063 hybrid_bfs  [2m[10/10 tests][0m
[32mPASS[0m #064 hybrid_floyd_warshall  [2m[10/10 tests][0m
[32mPASS[0m #065 hybrid_reduction_custom  [2m[10/10 tests][0m

==========================================
[32mPASS: 61[0m  [31mFAIL: 4[0m  [33mSKIP: 0[0m  TOTAL: 65
Full log: /home/threesamyak/leet_380/run_all_tests.log
